--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniform-resource-identifier"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["WatchDG <baranov@w3m.co>"]
 license = "MIT OR Apache-2.0"
 description = "uniform resource identifier"
@@ -16,3 +16,4 @@ exclude = [
 ]
 
 [dependencies]
+bytes = "1.0.1"
