--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,4 @@
 /target
 Cargo.lock
 **/*.rs.bk
-
-
-# Added by cargo
-#
-# already existing elements were commented out
-
-#/target
-#Cargo.lock
+/src/main.rs
