--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniform-resource-identifier"
-version = "0.0.5"
+version = "0.0.6"
 authors = ["WatchDG <baranov@w3m.co>"]
 license = "MIT OR Apache-2.0"
 description = "uniform resource identifier"
@@ -17,3 +17,4 @@ exclude = [
 
 [dependencies]
 bytes = "1.0.1"
+lazy_static = "1.4.0"
