--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,10 @@ exclude = [
 [dependencies]
 bytes = "1.0.1"
 lazy_static = "1.4.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "parse_scheme"
+harness = false
